omx(team): auto-checkpoint worker-2 [2]